--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ apiai==1.2.3
 googletrans==2.4.0
 pymongo==3.8.0
 dnspython==1.16.0
+Flask-SocketIO==3.3.2
+gevent==1.4.0
+gevent-websocket==0.10.1
+eventlet==0.24.1
